[tool.poetry]
name = "rq-dashboard-fork"
version = "0.7.0"
description = "rq-dashboard is a general purpose, lightweight, web interface to monitor your RQ queues, jobs, and workers in realtime."
license = "BSD"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Monitoring"
]
homepage = "https://github.com/Parallels/rq-dashboard"
authors = ["Vincent Driessen <vincent@3rdcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "*"
flask = "*"
redis = "*"
redis-sentinel-url = "*"
rq = ">=1.0"

[tool.poetry.plugins.console_scripts]
rq-dashboard = "rq_dashboard.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
